# voxeled

./: .gitignore  AGENTS.md  Cargo.toml  Changes_and_Features  README.md  bugsfixes.txt  config.toml  keymap.json
src/: cam_controller.rs  collision.rs  config.rs  config_loader.rs  data_structures.rs  event_loop.rs  input.rs  main.rs  playground.rs  random.rs  threadpool.rs  time.rs
src/console/: mod.rs
src/error/: mod.rs
src/gpu/: buffer_pool.rs  camera.rs  camera_controller.rs  exotic_cameras.rs  gpu_allocator.rs  instance.rs  mesh.rs  mod.rs  pipeline.rs  profiling.rs  projection.rs  render.rs  shader.rs  texture.rs  texture_set.rs  vertex.rs  window.rs
src/gpu/shader/: effects.wgsl  fxaa.wgsl  main.wgsl  post_processing.wgsl  projection.wgsl  sdfs.wgsl
src/gpu/shader/helpers/: mathematics.wgsl  randomness.wgsl
src/gpu/state/: mod.rs
src/input/: error.rs  mod.rs  settings.rs
src/physics/: cam_controller.rs  collision.rs  mod.rs  time.rs  verlet.rs
src/server/: chunk.rs  chunk_sys.rs  chunks.rs  frustum.rs  job.rs  meshing.rs  mod.rs  voxel.rs  world_gen.rs
src/threader/: jobs.rs  lazy.rs  mod.rs  task.rs
